# vuelax-crf

./: .gitattributes  .gitignore  CRF.ipynb  Extracting other features.ipynb  Makefile  Obtaining ground truth.ipynb  Part-Of-Speech Tagging.ipynb  Pipfile  Putting everything together.ipynb  README.md  pyproject.toml
aux/: spanish-tags.json
data/: to_label-done.csv  vuelos.csv
model/: vuelax.crfsuite
vuelax/: feature_selection.py  tokenisation.py
