[tool.poetry]
name = "vuelax-crf"
version = "0.0.0"
description = "Using Conditional Random Fields to retrieve informaiton from flight offers displayed at VuelaX.com"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pandas = "^1.0"
nltk = "^3.4"
scikit-learn = "^0.22.2"
python-crfsuite = "^0.9.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
